chore: update prettier config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
 	"editor.defaultFormatter": "esbenp.prettier-vscode",
 	"editor.formatOnSave": true,
-	"editor.formatOnPaste": false,
+	"editor.formatOnPaste": true,
 	"prettier.configPath": ".prettierrc",
 	"prettier.useEditorConfig": false,
 	"eslint.validate": [
