--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,11 @@
 {
-	"tabWidth": 2,
-	"useTabs": false
+  "plugins": ["prettier-plugin-astro"],
+  "overrides": [
+    {
+      "files": "*.astro",
+      "options": {
+        "parser": "astro"
+      }
+    }
+  ]
 }
