--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,17 @@
 {
-  "plugins": ["prettier-plugin-astro", "prettier-plugin-tailwindcss"],
+  "plugins": [
+    "prettier-plugin-astro",
+    "prettier-plugin-tailwindcss"
+  ],
   "overrides": [
     {
       "files": "*.astro",
       "options": {
-        "parser": "astro"
+        "parser": "astro",
+        "bracketSameLine": true,
+        "bracketSpacing": true,
+        "tabWidth": 2,
+        "printWidth": 120
       }
     }
   ]
