--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "posthog-js": "^1.155.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sharp": "^0.33.5",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
   },
