--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "idsw",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -7,7 +7,10 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "format": "prettier --plugin=prettier-plugin-astro --write .",
+    "prettier:check": "prettier --check --plugin=prettier-plugin-astro .",
+    "prepare": "husky"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
@@ -15,22 +18,23 @@
     "@astrojs/tailwind": "^5.1.1",
     "@fontsource-variable/inter": "^5.0.20",
     "@fontsource/inter": "^5.0.20",
-    "@fontsource/twinkle-star": "^5.0.20",
+    "@fontsource/twinkle-star": "^5.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.15.8",
-    "posthog-js": "^1.155.0",
+    "posthog-js": "^1.164.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sharp": "^0.33.5",
-    "tailwindcss": "^3.4.7",
-    "typescript": "^5.5.4"
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.6.2"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^8.0.0",
-    "eslint": "^9.8.0",
+    "eslint": "^9.11.0",
     "eslint-plugin-astro": "^1.2.4",
     "eslint-plugin-jsx-a11y": "^6.10.0",
+    "husky": "^8.0.0",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.5"
