--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/react": "^4.3.0",
-    "@astrojs/tailwind": "^6.0.2",
     "@fontsource-variable/inter": "^5.0.20",
     "@fontsource/inter": "^5.0.20",
     "@fontsource/twinkle-star": "^5.1.0",
+    "@tailwindcss/vite": "^4.1.12",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "astro": "^5.13.2",
