--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,8 @@
   "files.readonlyInclude": {
     "node_modules/**": true
   },
-  "npm.packageManager": "npm"
+  "npm.packageManager": "npm",
+  "[astro]": {
+    "editor.defaultFormatter": "astro-build.astro-vscode"
+  }
 }
