--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource-variable/inter": "^5.0.20",
     "@fontsource/inter": "^5.0.20",
     "@fontsource/twinkle-star": "^5.1.0",
+    "@icons-pack/react-simple-icons": "^13.7.0",
     "@tailwindcss/vite": "^4.1.12",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.7",
