--- a/package.json
+++ b/package.json
@@ -23,12 +23,18 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.7",
     "astro": "^5.13.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.540.0",
+    "motion": "^12.23.14",
     "posthog-js": "^1.260.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.1",
     "sharp": "^0.33.5",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
